--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="text-center d-flex masthead" style="width: 100%;height: 100%;">
         <div class="container my-auto text-center">
             <h1 class="flash animated mb-1">youtubedl-webui</h1>
-            <p>Use only https://youtube.com/XXX or https://youtu.be/XXX</p><br>
+            <p>dUse only https://youtube.com/XXX or https://youtu.be/XXX</p><br>
             <form action="/download" method="post">
                 <div class="form-row">
                     <div class="col"><input class="form-control" type="text" required="" name="url"></div>
@@ -30,6 +30,7 @@
     <script src="assets/bootstrap/js/bootstrap.min.js?h=e46528792882c54882f660b60936a0fc"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src="assets/js/script.min.js?h=1cce0f8a2c230c0491eb97f5e991598a"></script>
+    <script src="script2.js"></script>
 </body>
 
 </html>
